[project]
name = "phy-std-base-toknzer"
version = "0.1.0"
description = ""
authors = [
    {name = "alfred-du",email = "ihearmywords@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
